Introduce some assembly based math functions

--- a/smol/smol.vcxproj
+++ b/smol/smol.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Windows.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Math.hpp" />
     <ClInclude Include="OpenGL.hpp" />
     <ClInclude Include="Windows.hpp" />
   </ItemGroup>
