simple vertex color shader without camera

--- a/smol/smol.vcxproj
+++ b/smol/smol.vcxproj
@@ -179,6 +179,8 @@
   <ItemGroup>
     <None Include="assets\triangle_without_vbo.frag" />
     <None Include="assets\triangle_without_vbo.vert" />
+    <None Include="assets\vertex_color.frag" />
+    <None Include="assets\vertex_color.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
